# cowork-triage

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  start.py  start_ui.py  start_ui.sh  ui_app.py
.claude/: settings.local.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
Evaluator_SDK/: __init__.py  dataset_loader.py  evaluate_spam.py  spam_judge.py
data/chroma/e74db8ce-2c49-4459-a236-d86c82301219/: index_metadata.pickle
incoming_tickets/: ticket_001.md  ticket_002.md  ticket_003.md
scripts/: load_dataset.py  process_ticket.py
src/: __init__.py  agent.py  config.py  llm.py  state.py
src/nodes/: __init__.py  classifier.py  diagnoser.py  info_gatherer.py  intake.py  resolution.py
src/prompts/: __init__.py  templates.py
src/rag/: __init__.py  embeddings.py  retriever.py  vectorstore.py
src/tools/: __init__.py  generate_graph.py  github_tools.py
